# jupyterlab-firefox-launcher

./: .gitignore  CHANGELOG.md  COMPLETE_FIX_v0.7.3.md  DEPLOYMENT_GUIDE.md  FIREFOX_CONFIGURATION.md  LAUNCHER_TAB_FIX.md  LICENSE  README.md  README_XPRA.md  VERSION_MANAGEMENT.md  build.py  build.sh  build_hooks.py  check_entry_points.py  check_proxy_routes.py  copy-package-json-to-labextension.cjs  copy-package-json-to-labextension.js  debug-launcher.css  debug-launcher.html  debug_blank_canvas_firefox_widget.ipynb  debug_deployment.ipynb  debug_entry_points.ipynb  debug_firefox_launcher.ipynb  debug_firefox_launcher.sh  debug_firefox_proxy_connection.ipynb  debug_launcher_issue.py  debug_proxy_connection.ipynb  debug_proxy_connection_39125.ipynb  debug_server.sh  debug_websocket_connection.ipynb  debug_websocket_connection_issue.ipynb  debug_websocket_proxy_connection.ipynb  debug_xpra_startup.ipynb  debug_xpra_websocket_auto_connect.ipynb  deploy_to_server.sh  docker-compose.yml  firefox_connection_diagnostic.ipynb  fix_url_routing.ipynb  install.json  install_and_test.py  (+27 more)
.github/chatmodes/: uv_build_considerations.chatmode.md
.github/workflows/: pages.yml  release.yml  update-docs-version.yml
docs/: _config.yml  api-reference.md  architecture.md  contact.md  contributing.md  dependencies.md  development.md  index.md  installation.md  overview.md  release.md  troubleshooting.md
docs/_data/: project.yml
docs/_layouts/: default.html
frontend/src/: index.ts  style.css
jupyter-config/jupyter_server_config.d/: jupyterlab_firefox_launcher.json
jupyterlab_firefox_launcher/: __init__.py  __main__.py  _version.py  firefox_handler.py  firefox_handler.py.backup  scripts.py  server.py  server_extension.py  server_proxy.py  session_cleanup.py
jupyterlab_firefox_launcher/labextension/: build_log.json  install.json  package.json  tsconfig.json  webpack.config.js
jupyterlab_firefox_launcher/labextension/built/: build_log.json  package.json
jupyterlab_firefox_launcher/labextension/built/static/: 501.a343479b45975f9dcd10.js  501.cad010624e12d74d61ee.js  844.8231ceb294cae571d7aa.js  844.bbd1f25e08e710cd5486.js  lib_index_js.24fe269622f3b7027b3b.js  lib_index_js.24fe269622f3b7027b3b.js.map  lib_launcher_js.c05a45d558a43ca45aa3.js  lib_launcher_js.c05a45d558a43ca45aa3.js.map  remoteEntry.4148197c74cbe937625f.js  remoteEntry.4148197c74cbe937625f.js.map  remoteEntry.610ec66beabc52bdde5f.js  remoteEntry.c151451e7ef647bc23ad.js  remoteEntry.d57ceecffc7e6faf61c6.js  remoteEntry.d57ceecffc7e6faf61c6.js.map  remoteEntry.e8c09f5596dcc5f6bf22.js  style_index_css.f44678f1f06a97eaade4.js  style_index_css.f44678f1f06a97eaade4.js.map
jupyterlab_firefox_launcher/labextension/jupyterlab_firefox_launcher/labextension/: build_log.json  package.json
jupyterlab_firefox_launcher/labextension/jupyterlab_firefox_launcher/labextension/static/: remoteEntry.2a5f0f0d956bd68d23b7.js  remoteEntry.2a5f0f0d956bd68d23b7.js.map  style.js  style_index_css.1a0e2278da447df30fd9.js  style_index_css.1a0e2278da447df30fd9.js.map
jupyterlab_firefox_launcher/labextension/src/: index.css  index.ts  launcher.ts  svg.d.ts
jupyterlab_firefox_launcher/labextension/static/: 675.318ae56668a55a9995b8.js  remoteEntry.d9c11471d95de1de85ac.js
jupyterlab_firefox_launcher/labextension/style/: index.css
jupyterlab_firefox_launcher/share/: firefox-xstartup
jupyterlab_firefox_launcher/templates/: dependency_error.html  xpra_client.html
lib/: handler.d.ts  handler.js  index.d.ts  index.js
scripts/: create_release.sh  firefox-xstartup  update-docs-version.py
src/: firefox-api.ts  handler.ts  index.ts  svg.d.ts  xpra-client-proxy.ts  xpra-client.ts
style/: index.css
tests/: FIXES_SUMMARY.md  SERVER_CLEANUP_GUIDE.md  SESSION_KILLER_BUG_FIX.md  XSESSION_WARNING.md  debug_failures.py  debug_firefox_tabs.ipynb  debug_xpra.py  error_handling_demo.ipynb  quick_test.py  server_shutdown_cleanup.ipynb  test_authentication_fixes.py  test_bug_fix_verification.py  test_bug_verification.py  test_compression_fix.py  test_concurrent_fixed.py  test_csp_integration.py  test_csp_proxy.py  test_current_xvfb.py  test_error_handling.py  test_final_verification.py  test_jupyterhub_integration.ipynb  test_multi_session.py  test_multi_session_fix.py  test_screen_numbers.py  test_session_dir_paths.sh  test_session_killer.py  test_static_files.py  test_xsession_fix.py  test_xvfb_conflicts.py  verify_csp.py
tests_bak/: MULTI_SESSION_FIX.md  MULTI_SESSION_SUMMARY.md  SESSION_DIR_IMPLEMENTATION.md  debug_jupyterserverapp_error.ipynb  debug_xpra.py  jupyter_http_proxy_analysis.ipynb  quick_test.py  test_bug_fix_verification.py  test_current_xvfb.py  test_final_verification.py  test_multi_session_fix.py  test_xsession_fix.py
