[build-system]
requires = ["hatchling>=1.5.0", "jupyterlab>=4.0.0,<5", "hatch-nodejs-version>=0.3.2", "hatch-jupyter-builder>=0.8.3"]
build-backend = "hatchling.build"

[project]
name = "jupyterlab-firefox-launcher"
version = "0.1.0"
description = "JupyterLab extension to launch Firefox in a tab"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
    {name = "James Beedy", email = "james@vantagecompute.ai"},
]
keywords = [
    "Jupyter",
    "JupyterLab",
    "JupyterLab4",
    "Extension",
    "Firefox",
    "Browser",
]
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "jupyter-server>=2.0.1,<3",
    "jupyter-server-proxy>=4.0.0",
    "jupyterlab>=4.4.5",
    "tornado>=6.1.0",
    "psutil",
    "python-uinput>=1.0.1",
]

# Note: System dependencies required but not installable via pip:
# - xpra (with HTML5 support)
# - firefox
# 
# Install with:
#   apt-get install xpra xpra-html5 firefox
# or
#   yum install xpra python3-xpra-html5 firefox
# or  
#   conda install -c conda-forge xpra firefox

# Entry point for jupyter-server-proxy

[project.entry-points."jupyter_server_proxy"]
firefox-desktop = "jupyterlab_firefox_launcher.server_proxy:launch_firefox"

[project.optional-dependencies]
dev = [
    "build",
    "hatch",
    "jupyterlab>=4.0.0,<5",
]
test = [
    "coverage",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-jupyter[server]>=0.4",
]

[project.urls]
Homepage = "https://github.com/vantagecompute/jupyterlab-firefox-launcher"
Documentation = "https://github.com/vantagecompute/jupyterlab-firefox-launcher"
Repository = "https://github.com/vantagecompute/jupyterlab-firefox-launcher.git"
Changelog = "https://github.com/vantagecompute/jupyterlab-firefox-launcher/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.sdist]
artifacts = ["jupyterlab_firefox_launcher/labextension"]
exclude = [
    ".github", 
    "binder", 
    "jupyterlab_firefox_launcher/labextension/src",
    "jupyterlab_firefox_launcher/labextension/.yarn",
    "jupyterlab_firefox_launcher/labextension/node_modules",
    "jupyterlab_firefox_launcher/labextension/.yarnrc.yml",
    "jupyterlab_firefox_launcher/labextension/yarn.lock",
    "build.sh",
    "sync_version.py",
    "uv.lock",
    ".python-version"
]

[tool.hatch.build.targets.wheel]
packages = ["jupyterlab_firefox_launcher"]
exclude = [
    ".github", 
    "binder", 
    "jupyterlab_firefox_launcher/labextension/src",
    "jupyterlab_firefox_launcher/labextension/.yarn",
    "jupyterlab_firefox_launcher/labextension/node_modules",
    "jupyterlab_firefox_launcher/labextension/.yarnrc.yml",
    "jupyterlab_firefox_launcher/labextension/yarn.lock",
]


[tool.hatch.build.targets.wheel.shared-data]
"jupyterlab_firefox_launcher/labextension/built/static" = "share/jupyter/labextensions/jupyterlab-firefox-launcher/static"
"jupyterlab_firefox_launcher/labextension/lib/index.js" = "share/jupyter/labextensions/jupyterlab-firefox-launcher/lib/index.js"
"jupyterlab_firefox_launcher/labextension/lib/launcher.js" = "share/jupyter/labextensions/jupyterlab-firefox-launcher/lib/launcher.js"
"jupyterlab_firefox_launcher/labextension/lib/index.d.ts" = "share/jupyter/labextensions/jupyterlab-firefox-launcher/lib/index.d.ts"
"jupyterlab_firefox_launcher/labextension/lib/launcher.d.ts" = "share/jupyter/labextensions/jupyterlab-firefox-launcher/lib/launcher.d.ts"
"jupyterlab_firefox_launcher/labextension/lib/index.js.map" = "share/jupyter/labextensions/jupyterlab-firefox-launcher/lib/index.js.map"
"jupyterlab_firefox_launcher/labextension/lib/launcher.js.map" = "share/jupyter/labextensions/jupyterlab-firefox-launcher/lib/launcher.js.map"
"jupyterlab_firefox_launcher/labextension/style/icons" = "share/jupyter/labextensions/jupyterlab-firefox-launcher/style/icons"
"jupyterlab_firefox_launcher/labextension/built/package.json" = "share/jupyter/labextensions/jupyterlab-firefox-launcher/package.json"
"jupyterlab_firefox_launcher/labextension/install.json" = "share/jupyter/labextensions/jupyterlab-firefox-launcher/install.json"
"jupyter-config/jupyter_server_config.d" = "etc/jupyter/jupyter_server_config.d"
"jupyter_server_config.py" = "etc/jupyter/jupyter_server_config.py"
"scripts/firefox-xstartup" = "bin/firefox-xstartup"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.8.3"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
  "jupyterlab_firefox_launcher/labextension/built/package.json",
  "jupyterlab_firefox_launcher/labextension/lib/index.js",
  "jupyterlab_firefox_launcher/labextension/lib/launcher.js"
]


[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build"
npm = ["jlpm"]
path = "jupyterlab_firefox_launcher/labextension"

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "build"
npm = ["jlpm"]
path = "jupyterlab_firefox_launcher/labextension"

[tool.check-wheel-contents]
ignore = ["W002"]

# pytest configuration
[tool.pytest.ini_options]
minversion = "6.0"
xfail_strict = true
log_cli_level = "INFO"
addopts = [
    "-raXs", "--strict-markers", "--strict-config",
    "--cov=jupyterlab_firefox_launcher", "--cov-branch",
    "--cov-report=term-missing:skip-covered",
    "--cov-fail-under=75", "--cov-report=html", "--cov-report=xml"
]
testpaths = ["tests/"]
filterwarnings = [
    "error",
    "ignore:There is no current event loop:DeprecationWarning",
    "ignore:unclosed <socket.socket:ResourceWarning",
    "ignore:unclosed event loop:ResourceWarning",
]

# coverage configuration
[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.run]
relative_files = true
source = ["jupyterlab_firefox_launcher"]
omit = ["tests/*"]

# black configuration
[tool.black]
line-length = 100
target-version = ["py38"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 100
